--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "sql.mjs",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "SQLite Compiled to WASM, asyncified, and then wrapped in a little JavaScript.",
 	"keywords": ["SQLite", "database", "origin private file system"],
 	"files": [
 		"dist/*"
 	],
+	"main": "dist/index.mjs",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/evan-brass/sql.mjs"
