--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
 	"name": "sql.mjs",
 	"version": "0.2.0",
 	"description": "SQLite Compiled to WASM, asyncified, and then wrapped in a little JavaScript.",
-	"keywords": ["SQLite", "database", "origin private file system"],
+	"keywords": [
+		"sqlite",
+		"sqlite3",
+		"sqlite-wasm",
+		"sqlite3-wasm",
+		"webassembly",
+		"wasm",
+		"esm",
+		"opfs",
+		"origin-private-file-system"
+	],
 	"files": [
 		"dist/*"
 	],
