vfs rewrite - part 1

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"install": "make RELEASE=true"
 	},
 	"files": [
-		"dist/*.mjs",
+		"dist/**/*.mjs",
 		"dist/*.async.wasm"
 	],
 	"main": "dist/index.mjs",
