--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
 		"std/": "https://deno.land/std@0.219.0/"
 	},
 	"tasks": {
-		"build-in-docker": "docker run -v ./dist:/scratch/dist $(docker build --quiet . -f build/Dockerfile)",
+		"build-in-docker": "docker run -v ./src/dist:/scratch/src/dist $(docker build --quiet . -f build/Dockerfile)",
 		"build": "deno run --allow-run --allow-read --allow-write build/build.js"
 	}
 }
