Rewrite build again
Switch back to makefile (Deno was too slow) and use sed to do two things: modify the __wasi__ define to ignore it and convert the #defines in vendor/sqlite3.h into javascript constants in src/dist/sqlite_def.js

--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
 		"sqloaf": "./src/index.js"
 	},
 	"tasks": {
+		"compile": "docker run -it --rm -v ./src/dist:/build/dist $(docker build --quiet -t sqlite.js.builder -f build/Dockerfile .)",
 		"build-in-docker": "docker run -v ./src/dist:/scratch/src/dist $(docker build --quiet . -f build/Dockerfile)",
 		"build": "deno run --allow-run --allow-read --allow-write build/build.js",
 		"test": "deno test --allow-read"
